// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMetricTypeDeclarations — snapshot > emits TimeGrain<K> union for a metric view with time-typed + regular dimensions 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {
    "revenue": {
      key: "revenue";
      source: "appkit_demo.public.revenue_metrics_v2";
      lane: "sp";
      measures: {
      /** @sqlType DECIMAL(38,2) */
      "arr": number;
    };
      dimensions: {
      /** @sqlType TIMESTAMP @timeGrain day|month|week */
      "created_at": string;
      /** @sqlType STRING */
      "region": string;
      /** @sqlType STRING */
      "segment": string;
    };
      measureKeys: "arr";
      dimensionKeys: "created_at" | "region" | "segment";
      timeGrains: "day" | "month" | "week";
    };
  }
}
"
`;

exports[`generateMetricTypeDeclarations — snapshot > emits a stable MetricRegistry augmentation for a representative input 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {
    "revenue": {
      key: "revenue";
      source: "appkit_demo.public.revenue_metrics";
      lane: "sp";
      measures: {
      /** @sqlType DECIMAL(38,2) */
      "arr": number;
      /** @sqlType DECIMAL(38,2) */
      "mrr": number;
    };
      dimensions: {
      /** @sqlType STRING */
      "region": string;
      /** @sqlType STRING */
      "segment": string;
    };
      measureKeys: "arr" | "mrr";
      dimensionKeys: "region" | "segment";
      timeGrains: never;
    };
  }
}
"
`;

exports[`generateMetricTypeDeclarations — snapshot > emits an empty MetricRegistry interface when no metrics are registered 1`] = `
"// Auto-generated by AppKit - DO NOT EDIT
// Generated by 'npx @databricks/appkit generate-types' or Vite plugin during build
import "@databricks/appkit-ui/react";
declare module "@databricks/appkit-ui/react" {
  interface MetricRegistry {}
}
"
`;
